# libchardet

./: .gitignore  .travis.yml  Changelog  INSTALL  Makefile.am  Makefile.in  README.md  acconfig.h  autogen  chardet-config.h.in  chardet-config.in  chardet.pc.in  configure  configure.ac  libchardet.spec  libchardet.spec.in
include/: version.h
m4/: ax_gcc_visibiliity.m4
man/: Makefile.am  Makefile.in
man/en/: detect.3  detect_destroy.3  detect_handledata.3  detect_init.3  detect_obj_free.3  detect_obj_init.3  detect_reset.3
man/ko/: detect.3  detect_destroy.3  detect_handledata.3  detect_handledata_r.3  detect_init.3  detect_obj_free.3  detect_obj_init.3  detect_r.3  detect_reset.3
patch/: original-encode-detect-1.01.patch
src/: CharDistribution.cpp  CharDistribution.h  JpCntx.cpp  JpCntx.h  Makefile.am  Makefile.in  chardet.cpp  chardet.h  nsBig5Prober.cpp  nsBig5Prober.h  nsCharSetProber.cpp  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.cpp  nsEUCJPProber.h  nsEUCKRProber.cpp  nsEUCKRProber.h  nsEUCTWProber.cpp  nsEUCTWProber.h  nsEscCharsetProber.cpp  nsEscCharsetProber.h  nsEscSM.cpp  nsGB2312Prober.cpp  nsGB2312Prober.h  nsHebrewProber.cpp  nsHebrewProber.h  nsLatin1Prober.cpp  nsLatin1Prober.h  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  nsMBCSSM.cpp  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsSBCharSetProber.cpp  nsSBCharSetProber.h  nsSJISProber.cpp  nsSJISProber.h  nsUTF8Prober.cpp  nsUTF8Prober.h  (+2 more)
src/tables/: LangArabicModel.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangDanishModel.cpp  LangEsperantoModel.cpp  LangFrenchModel.cpp  LangGermanModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangSpanishModel.cpp  LangThaiModel.cpp  LangTurkishModel.cpp  LangVietnameseModel.cpp
tags/1.0.0/: Changelog  chardet-config.h.in  libchardet.spec
tags/1.0.0/patch/: original-encode-detect-1.01.patch
tags/1.0.0/src/: chardet.cpp
tags/1.0.0/test/: Makefile
tags/1.0.1/: Makefile.in  autogen  configure.ac
tags/1.0.1/src/: Makefile.in  nsUniversalDetector.cpp
tags/1.0.1/test/: sample1.c
tags/1.0.2/: acconfig.h  chardet-config.h.in  chardet-config.in
tags/1.0.2/src/: Makefile.in
tags/1.0.3/: Makefile.am  aclocal.m4  chardet-config.h  chardet.pc.in  configure  configure.ac
tags/1.0.3/include/: version.h
tags/1.0.3/man/: Makefile.in
tags/1.0.3/man/en/: detect_destroy.3  detect_reset.3
tags/1.0.3/man/ko/: detect_handledata.3
tags/1.0.3/src/: Makefile.am  Makefile.in
tags/1.0.4/: Changelog  Makefile.am  Makefile.in  README  chardet-config.h  chardet-config.h.in  chardet.pc.in  libchardet.spec
tags/1.0.4/include/: version.h
tags/1.0.4/m4/: ax_gcc_visibiliity.m4
tags/1.0.4/man/: Makefile.am
tags/1.0.4/man/en/: detect.3  detect_handledata.3  detect_obj_free.3  detect_obj_init.3
tags/1.0.4/man/ko/: detect.3
tags/1.0.4/project/: libchardet.cbp
tags/1.0.4/src/: JpCntx.h  Makefile.in  nsUniversalDetector.cpp
tags/init/: INSTALL
tags/init/src/: chardet.h
tags/v1_0_1/: chardet-config.h.in
tags/v1_0_2/: Changelog  README  configure.ac  libchardet.spec
tags/v1_0_2/src/: chardet.cpp
test/: Makefile  Makefile.am  Makefile.in  bom-test.c  sample.c  sample1.c  utf-8-bom.txt  utf-8.txt
trunk/: Changelog  INSTALL  Makefile.am  Makefile.in  README  acconfig.h  autogen  chardet-config.h.in  chardet-config.in  configure  configure.ac  libchardet.spec  libchardet.spec.in
trunk/m4/: ax_gcc_visibiliity.m4
trunk/man/: Makefile.in
trunk/man/en/: detect.3  detect_init.3  detect_obj_free.3
trunk/man/ko/: detect.3  detect_destroy.3  detect_init.3  detect_obj_free.3  detect_obj_init.3  detect_reset.3
trunk/patch/: original-encode-detect-1.01.patch
trunk/src/: JpCntx.cpp  LangHebrewModel.cpp  Makefile.am  Makefile.in  chardet.cpp  chardet.h  nsUniversalDetector.h
trunk/test/: sample.c
